test/should-fail/jfxc4038sub.fx
/**
 * @subtest jfxc4038test.fx
 *
 *
 */
public var f=function(){jfxc4038test{}.func()}